# ml-ds-platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.blue.yml  compose.green.yml  compose.yml  docker-compose.yml  eshaan.txt  fastapi-deployment.yaml  pyproject.toml  redis-deployment.yaml  requirements.txt  run_all.sh  setup.py  test.txt
.github/workflows/: deploy.yml  ping.yml
monitoring/: docker-compose.yml  prometheus.yml
src/Api/: api.py
src/DataScience/Plots/: plots.py
src/DataScience/UI/: frontend.py
src/api/: api.py  main.py
src/api/endpoints/: api_key.py  csv_file.py  data_science.py  data_summary.py  machine_learning.py
src/api/routes/: api_key.py  csv_file.py  data_science.py  data_summary.py  machine_learning.py
src/database/: __init__.py  crud.py  model.py  postgres_db.py
src/datascience/: data_summary.py
src/datascience/plots/: Salary_dataset.csv  plots.py
src/machinelearning/: main_train_flow.py  model_load_template.py  models.py  preprocessing.py  test.py
src/service/database/: database_service.py
src/service/datascience/: data_summary_service.py  ds_service.py  plot_service.py
src/service/fileservice/: csv_service.py
src/test/: performance_test.py
streamlit_frontend/: .dockerignore  app.py  config.py  utils.py
test.egg-info/: PKG-INFO  SOURCES.txt
